# assay

./: .gitmodules  Dockerfile  Dockerfile-hik  README.md  docker-compose.yml  go.mod  go.sum  main.go  nginx.conf
configs/: config.go  config.yml
constants/: key.go  topic.go
controllers/: alarm.go  barriers.go  computer.go  device.go  import.go  login.go  main.go  nvr.go  oss.go  role.go  text.go  user.go
dao/: alarm.go  base.go  device.go  generic.go  oss_file.go  role.go  user.go
forms/: alarm.go  barriers.go  computer.go  device.go  login.go  nvr.go  role.go  text.go  user.go
hik/: CMakeLists.txt  build.sh  hik  main.cpp  pkg_build.sh
hik/configs/: config.cpp  config.h  config.yml  config_s.cpp  config_s.h
hik/controllers/: nvr.cpp  nvr.h  nvr_c.cpp  nvr_c.h
hik/forms/: nvr.h
hik/libs/lib/cmake/httplib/: httplibConfig.cmake  httplibConfigVersion.cmake  httplibTargets.cmake
hik/libs/lib/cmake/spdlog/: spdlogConfigTargets-release.cmake
hik/libs/lib/cmake/yaml-cpp/: yaml-cpp-targets-release.cmake
hik/libs/lib/pkgconfig/: spdlog.pc  yaml-cpp.pc
hik/libs/share/pkgconfig/: nlohmann_json.pc
hik/services/: nvr.cpp  nvr.h  nvr_s.cpp  nvr_s.h
hik/util/: error.cpp  error.h
infra/constant/: code.go  form.go  jwt.go  key.go
infra/global/: main.go
middlewares/: jwt.go
routers/: alarm.go  barriers.go  computer.go  device.go  import.go  init.go  login.go  nvr.go  oss.go  role.go  textScreen.go  user.go
services/: alarm.go  barriers.go  computer.go  device.go  import.go  login.go  nvr.go  oss.go  role.go  text.go  user.go
sql/: initdb.sql
(+25 files in other folders)
